samples/request-response-mediation-interceptors/k8s-resources/api-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: interceptor
spec:
  ports:
    - name: http
      port: 9082
      targetPort: 9082
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: interceptor
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: wso2am/apk-sample-legacy-backend-nodejs:v1.0.0
          imagePullPolicy: IfNotPresent
          name: backend-container
          ports:
            - containerPort: 9082
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "100m"
