samples/request-response-mediation-interceptors/k8s-resources/interceptor-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: interceptor-svc
  namespace: interceptor
spec:
  ports:
    - name: https
      port: 9081
      targetPort: 9081
  selector:
    app: interceptor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: interceptor
  name: interceptor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interceptor
  template:
    metadata:
      labels:
        app: interceptor
    spec:
      containers:
        - image: wso2am/apk-sample-xml-interceptor-nodejs:v1.0.0
          imagePullPolicy: IfNotPresent
          name: interceptor-container
          ports:
            - containerPort: 9081
          resources:
            requests:
              memory: "30Mi"
              cpu: "100m"
            limits:
              memory: "30Mi"
              cpu: "100m"
          volumeMounts:
          - name: interceptor-certs-vol
            mountPath: /usr/src/app/certs
      volumes:
        - name: interceptor-certs-vol
          secret: 
            secretName: interceptor-cert
